--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">CrocoAndroidApp</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_password">Пароль</string>
+    <string name="login">Войти</string>
+    <string name="wrong_email">Неправильный email</string>
+    <string name="wrong_credentials_format">Неправильные форматы у почты или пароля</string>
+    <string name="no_internet">Нет интернета</string>
+    <string name="unknown_error">Неизвестная ошибка</string>
+    <string name="failed_login">Неправильный логин или пароль</string>
+    <string name="login_label">Авторизоваться в Приложение</string>
 </resources>
