--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,29 @@
     <string name="failed_login">Неправильный логин или пароль</string>
     <string name="login_label">Авторизоваться в Приложение</string>
     <string name="profile">Профиль</string>
-    <string name="items">Предметы</string>
+    <string name="tasks">Задачи</string>
+    <string name="personal_info">Личная информация</string>
+    <string name="name">Имя</string>
+    <string name="last_name">Фамилия</string>
+    <string name="third_name">Отчество</string>
+    <string name="sex">Пол</string>
+    <string name="male">Мужской</string>
+    <string name="female">Женский</string>
+    <string name="undefined_sex">Не указано</string>
+    <string name="no_data">Нет данных</string>
+    <string name="contacts">Контакты</string>
+    <string name="email">Email</string>
+    <string name="phone_number">Номер телефона</string>
+    <string name="choose_user">Выбрать пользователя</string>
+    <string name="necessarily_fields">Обязательные поля</string>
+    <string name="additional_information">Дополнительная информация</string>
+    <string name="birth_date">Дата рождения</string>
+    <string name="save">Сохранить</string>
+    <string name="wrong_name">Неправильное имя</string>
+    <string name="wrong_phone_number">Неправильный номер телефона</string>
+    <string name="hint_name">Имя</string>
+    <string name="hint_phone_number">Номер телефона</string>
+    <string name="hint_second_name">Фамилия</string>
+    <string name="hint_third_name">Отчество</string>
+    <string name="wrong_field">Проверьте введеные поля</string>
 </resources>
