--- a/domain/src/main/res/values/strings.xml
+++ b/domain/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">domain</string>
+    <string name="male">Мужской</string>
+    <string name="female">Женский</string>
+    <string name="not_mentioned">Не указано</string>
 </resources>
