--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="contacts">Контакты</string>
     <string name="email">Email</string>
     <string name="phone_number">Номер телефона</string>
-    <string name="choose_user">Выбрать пользователя</string>
+    <string name="choose_users">Выбрать пользователей</string>
     <string name="necessarily_fields">Обязательные поля</string>
     <string name="additional_information">Дополнительная информация</string>
     <string name="birth_date">Дата рождения</string>
