temp before my ubuntu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="hint_second_name">Фамилия</string>
     <string name="hint_third_name">Отчество</string>
     <string name="wrong_field">Проверьте введеные поля</string>
+    <string name="no_camera">Нет доступа к камере</string>
 </resources>
